# mq-update

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml
assets/: demo.tape
scripts/: install.sh
src/: main.rs
