[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities"]
description = "Updater for mq command-line tool"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["mq", "update", "self-update"]
license = "MIT"
name = "mq-update"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.1.4"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
colored = "3.1.1"
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.18"

[[bin]]
name = "mq-update"
path = "src/main.rs"

